--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@ Fun Facts
 Almost everything in my repos are developed while i was learning that
 technology
 
-* I write https://dhruvdabhi.me/blogs[blogs] on my website
+* I write https://dhruvdabhi.me/blog[blogs] on my website
 * I do open source, btw
 * I play ukulele, btw (absolute chad)
 * I sh*tpost on X (previously twitter)
